--- a/applications/owan/environments/development/Dockerfile
+++ b/applications/owan/environments/development/Dockerfile
@@ -30,3 +30,7 @@ RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.6 1 
 
 RUN mkdir -p /home/gatheluck/owan/
 WORKDIR /home/gatheluck/owan/
+COPY Makefile pyproject.toml .flake8 ./
+RUN poetry install
+
+COPY src src
