--- a/applications/owan/pyproject.toml
+++ b/applications/owan/pyproject.toml
@@ -39,7 +39,7 @@ disallow_incomplete_defs = true
 disallow_subclassing_any = true
 disallow_untyped_calls = true
 disallow_untyped_decorators = true
-disallow_untyped_defs = true
+disallow_untyped_defs = false
 no_implicit_optional = true
 no_implicit_reexport = true
 strict_equality = true
