--- a/applications/owan/environments/continuous_integration/docker-compose.yaml
+++ b/applications/owan/environments/continuous_integration/docker-compose.yaml
@@ -8,3 +8,5 @@ services:
       dockerfile: environments/continuous_integration/Dockerfile
     ports:
       - "8000:8000"
+    stdin_open: true
+    tty: true
