feat: add setting for nginx.

--- a/applications/owan/environments/production/docker-compose.yaml
+++ b/applications/owan/environments/production/docker-compose.yaml
@@ -1,7 +1,23 @@
 version: "3.8"
 
 services:
+  web:
+    container_name: web
+    image: nginx:alpine
+    depends_on:
+      # `owan-broker` should run beforehand. 
+      - owan-broker
+    ports:
+      # port mapping: (host OS port:nginx container port)
+      - "80:80"
+    volumes:
+      # volume mount: (host OS path:container path)
+      - ../../../owan/web/conf.d:/etc/nginx/conf.d
+    networks:
+      - nginx_network
+
   owan-broker:
+    container_name: owan-broker
     restart: always
     runtime: nvidia
     environment:
@@ -16,7 +32,13 @@ services:
     stdin_open: true
     tty: true
     command: poetry run gunicorn 'owan.wsgi:main()' -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000
+    expose:
+      - 8000
+    networks:
+      - nginx_network
+
   owan-worker:
+    container_name: owan-worker
     restart: always
     build:
       context: ../../
@@ -24,6 +46,12 @@ services:
     links:
       - redis
     command: poetry run celery --app owan.worker worker --pool solo --concurrency 1
+
   redis:
+    container_name: redis
     image: redis:6.0-alpine
     restart: always
+
+networks:
+  nginx_network:
+    driver: bridge
