--- a/applications/owan/pyproject.toml
+++ b/applications/owan/pyproject.toml
@@ -17,6 +17,7 @@ dataclasses = "^0.8"
 types-dataclasses = "^0.6.1"
 python-multipart = "^0.0.5"
 Pillow = "^8.4.0"
+boto3 = "^1.20.7"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
