feat: add setting for env file.

--- a/applications/owan/environments/development/docker-compose.yaml
+++ b/applications/owan/environments/development/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     runtime: nvidia
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
+    env_file:
+      - owan.env
     build:
       context: ../../
       dockerfile: environments/development/Dockerfile
